--- a/CIS-201-Projects/HeshamAltourki_homework01.html
+++ b/CIS-201-Projects/HeshamAltourki_homework01.html
@@ -3,7 +3,7 @@
 	<head>
 		<title> About me </title>
 		<meta charset="UTF-8" />
-       <link rel= "Stylesheet" href= "../Src/Css/CSS_HeshamAltourki_201821341.css" />
+       <link rel= "Stylesheet" href= "Src/Css/CSS_HeshamAltourki_201821341.css" />
       
    
     
