--- a/CIS-201-Projects/Dayscounter.html
+++ b/CIS-201-Projects/Dayscounter.html
@@ -4,6 +4,11 @@
   <meta charset="UTF-8">
   <title>Countdown to Zero</title>
   <link rel="stylesheet" href="Src/ProjectStyle.css">
+     <ul class="nav-area">
+        <li><a href="Index.html">Home page</a></li>
+        <li><a href="About%20me.html">About me</a></li>
+        <li><a href="Contact%20us.html">Contact us</a></li>
+        </ul>
 
 </head>
 <body>
