--- a/CIS-201-Projects/Index.html
+++ b/CIS-201-Projects/Index.html
@@ -1,65 +1,36 @@
-<html>
+<!DOCTYPE html>
+
+<html lang="en">
     <head>
     
       <title> Online CV</title>
+        <meta charset="UTF-8" />
       <meta name= "viewport" content="width=device-width, initial-scale=1.0">
       <link rel= "stylesheet" href= "Src/ProjectStyle.css">
+         <ul class="nav-area">
+        <li><a href="About%20me.html">About me</a></li>
+        <li><a href="Contact%20us.html">Contact us</a></li>
+        <li><a href="Dayscounter.html">Project</a></li>
+        </ul>
     </head>
 <body>
     <div class="HeshamAltourki-img">
     <img src="Src/Imgs/PersonalPic.jpeg">
     </div>
     <div class="profile-info">
-    <h1> Hesham Saleh Altourki</h1>
-    <p class="about">I'm student in Al Yamamah university, this is my second year. I like learning new things in computer especially in software. I hope by end of this course that I'll be interested in web development and go deep in it.</p>
+    <h1> Hello</h1>
+    <p class="about">This is my website. I'll be sharing with you my project and you can see on top of the page the about me and contact us pages. You can see my social media down below.</p>
     <div class="social-media">
         <a href="https://www.linkedin.com/in/hesham-altourki-68295a210/"> <img src="Src/Imgs/Linkedin.png"></a>
     <a href="https://twitter.com/ihashom"><img src="Src/Imgs/twitter.png"></a>
     <a href="https://wa.me/96650337589"><img src="Src/Imgs/whatsapp.png"></a> 
     </div>
-         <h2>Expertise</h2>
-        <div class="expertise">
-        <img src="Src/Imgs/voulnteer.png">
-        <p><b>Volunteering</b></p>
-            <small>
-               opportunity to gain experience, skills and confidence. You can meet new people and have fun.
-            </small>
-        </div>
-          <div class="expertise">
-        <img src="Src/Imgs/creativeThink.png">
-        <p><b>Creative thinking</b></p>
-            <small>
-            by thinking out of the box and Being able to train my mind to think creatively.    
-            </small>
-        </div>
-        <div class="expertise">
-        <img src="Src/Imgs/ProplemSolving.png">
-        <p><b>Problem Solving</b></p>
-            <small>
-            By being able to define a problem; the cause of the problem and find a solution.
-            </small>
-            </div>
+   
         <h2>My project</h2>
             <div class="Project">
            <a href="Dayscounter.html"><img src="Src/Imgs/Counter.png"></a> 
         </div>
-        <div class="form-box">
-            <h2>Contact me</h2>
-        <form>
-            <div class="input-group">
-            <input type="text" placeholder="First Name">
-             <input type="text" placeholder="Last Name">
-            </div>
-            <div class="input-group">
-            <input type="number" placeholder="Phone Number">
-             <input type="email" placeholder="Email">
-            </div>
-            <div class="text-area">
-            <textarea rows="4" placeholder="Your message"></textarea>
-            </div>
-            <button type="submit" class="submit-btn">Send Message</button>
-            </form>
-        </div>
+       
         <div class="contact">
         <img src="Src/Imgs/email.png"><span>201821341@yu.edu.sa</span>
         <img src="Src/Imgs/Phone.png"><span>+966503375896</span>
