--- a/CIS-201-Projects/About me.html
+++ b/CIS-201-Projects/About me.html
@@ -8,7 +8,8 @@
          <link rel= "stylesheet" href= "Src/ProjectStyle.css">
         <ul class="nav-area">
         <li><a href="Index.html">Home page</a></li>
-        <li><a href="#">Contact us</a></li>
+        <li><a href="Contact%20us.html">Contact us</a></li>
+        <li><a href="calculator.html">Calculator</a></li>
         <li><a href="Dayscounter.html">Project</a></li>
         </ul>
          </head>
