--- a/CIS-201-Projects/Contact us.html
+++ b/CIS-201-Projects/Contact us.html
@@ -9,13 +9,15 @@
         <ul class="nav-area">
         <li><a href="Index.html">Home page</a></li>
         <li><a href="About%20me.html">About me</a></li>
+        <li><a href="calculator.html">Calculator</a></li>
         <li><a href="Dayscounter.html">Project</a></li>
         </ul>
+        
     </head>
     
     <body>
      <div class="form-box">
-            <h2>  Contact me</h2>
+            <h2>Contact me</h2>
         <form>
             <div class="input-group">
             <input type="text" placeholder="First Name">
