--- a/CIS-201-Projects/Dayscounter.html
+++ b/CIS-201-Projects/Dayscounter.html
@@ -8,6 +8,7 @@
         <li><a href="Index.html">Home page</a></li>
         <li><a href="About%20me.html">About me</a></li>
         <li><a href="Contact%20us.html">Contact us</a></li>
+        <li><a href="calculator.html">Calculator</a></li>
         </ul>
 
 </head>
