--- a/CIS-201-Projects/Index.html
+++ b/CIS-201-Projects/Index.html
@@ -10,6 +10,7 @@
          <ul class="nav-area">
         <li><a href="About%20me.html">About me</a></li>
         <li><a href="Contact%20us.html">Contact us</a></li>
+        <li><a href="calculator.html">Calculator</a></li>
         <li><a href="Dayscounter.html">Project</a></li>
         </ul>
     </head>
@@ -19,7 +20,7 @@
     </div>
     <div class="profile-info">
     <h1> Hello</h1>
-    <p class="about">This is my website. I'll be sharing with you my project and you can see on top of the page the about me and contact us pages. You can see my social media down below.</p>
+    <p class="about">Web development is the work involved in developing a website and it can range from developing a simple page to complex web application. This is my website. I'll be sharing with you my project and you can see on top of the page the about me, contact us and calculator pages. You can see my social media down below.</p>
     <div class="social-media">
         <a href="https://www.linkedin.com/in/hesham-altourki-68295a210/"> <img src="Src/Imgs/Linkedin.png"></a>
     <a href="https://twitter.com/ihashom"><img src="Src/Imgs/twitter.png"></a>
